# librapid

./: .gitmodules  AUTHORS  ChangeLog  Makefile.am  README  README.md  configure.ac
src/: Makefile.am  api.c  api.h  message.c  message.h  rapid_api.c  rapid_api.h
